# LocalLLM

./: .gitignore  README.md  index.html  install.ps1  install.sh  package-lock.json  package.json  parseDocument-fixed.js  start-dev.ps1  start-dev.sh  start.ps1  start.sh  tailwind.config.js  test-pdf-parse.cjs  test-pdf-parse.js  test-pdf.js  test-vision.js  tsconfig.json  vite.config.ts
electron/: main.js  preload.js
kern-ux-redesign/: index.html  package-lock.json  package.json  tailwind.config.js
kern-ux-redesign/src/: App.tsx  index.css  types.ts
kern-ux-redesign/src/components/: ComponentCard.tsx  FilterDropdown.tsx  Header.tsx  SearchBar.tsx
kern-ux-redesign/src/data/: components.ts
src/: App.css  App.tsx  CompleteOpenNotebook.tsx  DebugApp.tsx  FixedOpenNotebook.tsx  LocalLLMApp.tsx  OpenNotebookApp.tsx  SimpleApp.tsx  SimpleOpenNotebook.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  processors.rs  storage.rs
src-tauri/src/commands/: database_commands.rs  document_commands.rs  mod.rs  onnx_commands.rs  pst_commands.rs
src/components/: ModelManager.tsx  Sidebar.tsx  Sidebar_backup.tsx
src/components/chat/: ChatInterface.tsx
src/components/document/: DocumentViewer.tsx
src/components/kern-ux/: KERNUXView.tsx  components.ts  types.ts
src/components/models/: ModelManager.tsx
src/components/pst/: PSTExplorer.tsx
src/types/: electron.d.ts
